# whisper-wire

./: LICENSE  README.md  alembic.ini  cmd.py  pyproject.toml
migration/: env.py
migration/versions/: ae48c495c799_added_user_model.py
server/: main.py
server/auth/: exceptions.py  router.py
server/auth/schemas/: requests.py  responses.py
server/auth/services/: auth_service.py
server/core/: config.py  database.py  dependencies.py  security.py
server/core/dependencies/: __init__.py  auth.py
server/users/: exceptions.py  router.py
server/users/models/: user.py
server/users/schemas/: filter.py  user.py
server/users/services/: user_service.py
